# ded2018-Derivator

./: CMakeLists.txt  README.md  todolist.md
include/: calculus_grammar.h  call_op.h  constant.h  differentiate_op.h  expression.h  function.h  grammar.h  grammar_post.h  grammar_pre.h  negate_op.h  power_op.h  product.h  subst_op.h  sum.h  tex_phrases.h  variable.h
src/: expression.cpp  grammar_helper.cpp  repl.cpp  tex.cpp
src/calculus/: calculus_internal.h  call_op.cpp  constant.cpp  differentiate_op.cpp  expression.cpp  function.cpp  negate_op.cpp  power_op.cpp  product.cpp  subst_op.cpp  sum.cpp  variable.cpp
